# SoxideTest

./: Cargo.toml  README.md  build.bat  sausage_playground.soxproj  voxel_world.soxproj
.github/workflows/: ci.yml
contents/: game.rhai
contents/input/: Jump.soxaction  Look.soxaction  Move.soxaction  MoveBack.soxaction  MoveForward.soxaction  MoveLeft.soxaction  MoveRight.soxaction  gameplay.soxinputcontext
contents/scenes/: main.soxscene  voxel_world.soxscene
contents/scripts/: game.rhai  input_setup.rhai
examples/: headless_check.rs
plugins/voxel/: voxel.soxplugin
src/: lib.rs  main.rs
tests/: plugin.rs  voxel.rs
voxel_contents/scenes/: voxel_world.soxscene
