[workspace]
resolver = "2"
members = ["."]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Matches the engine's real MSRV (enforced in the engine's CI).
rust-version = "1.88"

[package]
name = "sausage_playground"
version.workspace = true
edition.workspace = true
publish = false

# Built as both an rlib (for the bin + tests) and a cdylib (the full-`App`
# plugin the editor/runner dlopen — see `sox_plugin!(install_voxel_game)` in
# src/lib.rs and plugins/voxel/voxel.soxplugin).
[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "sausage_playground"
path = "src/main.rs"

# The engine lives in a SEPARATE repository and is pulled in as a git
# dependency (NOT a path dependency): the game tree and the engine tree
# stay physically disjoint, which is a hard architectural invariant of
# Soxide. Pinned to an exact `main` revision for reproducibility — the same
# revision the editor is built from, which the plugin ABI-version probe
# requires (a full-`App` plugin shares real Rust types with the host).
[dependencies]
soxide-engine = { git = "https://github.com/SoxWolf/Soxide", package = "soxide-engine", rev = "fbcbb1d53b3c473969c4ae7b057ff9f55e317a8a" }

[target.'cfg(target_os = "linux")'.dependencies]
soxide-platform-linux = { git = "https://github.com/SoxWolf/Soxide", package = "soxide-platform-linux", rev = "fbcbb1d53b3c473969c4ae7b057ff9f55e317a8a" }

[target.'cfg(target_os = "windows")'.dependencies]
soxide-platform-windows = { git = "https://github.com/SoxWolf/Soxide", package = "soxide-platform-windows", rev = "fbcbb1d53b3c473969c4ae7b057ff9f55e317a8a" }

[dev-dependencies]
# For the headless test that dlopens the compiled plugin and runs it exactly
# as the editor/runner would.
libloading = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
